2001-12-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Replace `tmda-dated-address' references with
	`tmda-make-address -d'.

2001-12-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Recommend Python >= 2.2.

2001-12-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (href): Modify Sendmail configuration
	instructions: Only FEATURE(`local_procmail') is necessary, no need
	to add X-Envelope-* headers.

	* config-server.ht: Modify Sendmail/.procmailrc instructions to
	construct both RECIPIENT and SENDER from a combination of
	EXTENSION and available environment variables.

2001-12-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-pre.ht (href): Clarify the required format of SENDER,
	RECIPIENT, and EXTENSION.

	* config-server.ht: Update the sample procmail recipe for Sendmail
	to remove angle brackets from the SENDER and RECIPIENT vars.

2001-12-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-client.ht: Mention that tmda-sendmail will use the
	address in the "From" header created by the MUA as the basis for
	the tagged address.

2001-12-14  Jason R. Mastaler  <jason@mastaler.com>

	* history.ht (Links): Add a timeline for the non-qmail support.
	
2001-12-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* features.ht (Links): Mention Sendmail support.

	* requirements.ht (Links): Ditto.

	* config-server.ht: Add Sendmail configuration information.  Set
	the necessary environment variables from the X-Envelope* headers
	before passing the message to tmda-filter.

	* config-pre.ht: Add Sendmail configuration information.  Focus on
	using procmail as the local mailer, and then adding X-Envelope-To
	and X-Envelope-From headers to all incoming messages.

2001-12-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* config-server.ht: Move success reporting information onto the
	"Installation" page.
