@@ -28,6 +28,10 @@ Debian Package</a><br><br>
 <br><br>
 </ul>
 
+<strong>NOTE:</strong> The Debian and FreeBSD packages may not be caught up
+with the latest release.
+<br><br>
+
 <u>Old Releases:</u><br>
 <a href="http://prdownloads.sourceforge.net/tmda/" TARGET="Resource Window">
 Past releases</a> are available for download as well.<br><br>
