@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Dec  4 09:43:29 2001 -->
+<!-- Thu Dec 27 13:29:54 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -152,6 +152,10 @@ Debian Package</a><br><br>
 <a href="http://www.freebsd.org/cgi/ports.cgi?query=tmda&stype=name" TARGET="Resource Window">(mail/tmda)</a>
 <br><br>
 </ul>
+
+<strong>NOTE:</strong> The Debian and FreeBSD packages may not be caught up
+with the latest release.
+<br><br>
 
 <u>Old Releases:</u><br>
 <a href="http://prdownloads.sourceforge.net/tmda/" TARGET="Resource Window">
